--- a/di-16-zhang-fu-wu-qi/di-16.3-jie-nodejs-xiang-guan.md
+++ b/di-16-zhang-fu-wu-qi/di-16.3-jie-nodejs-xiang-guan.md
@@ -16,7 +16,8 @@ pkg 安装的二进制 `nodejs` 依赖 `/lib/libcrypto.so.xxx`，即某个特定
 或
 
 ```
-# cd /usr/ports/www/yarn/ && make install clean #使用 ports 编译可规避上述问题
+# cd /usr/ports/www/yarn/
+# make install clean # 使用 ports 编译可规避上述问题
 ```
 
 ## npm + nodejs
@@ -29,8 +30,15 @@ pkg 安装的二进制 `nodejs` 依赖 `/lib/libcrypto.so.xxx`，即某个特定
 
 ```
 # cd /usr/ports/www/npm/
-# make install clean
+# make install clean # 使用 ports 编译可规避上述问题
 ```
+## FreeBSD npm 换源
+
+```sh
+# npm config set registry https://registry.npmmirror.com
+```
+
+这就是原来的淘宝镜像站。见 <https://npmmirror.com>。
 
 ## 故障排除
 
