补充官方二进制包

--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
@@ -1,6 +1,22 @@
 # 第 17.9 节 AList
 
 
+## 官方二进制包
+
+```sh
+# mkdir alist
+# cd alist
+# fetch https://github.com/AlistGo/alist/releases/download/v3.39.2/alist-freebsd-amd64.tar.gz
+# tar zxvf alist-freebsd-amd64.tar.gz
+# rm alist-freebsd-amd64.tar.gz 
+```
+
+>**注意**
+>
+>根据[手动安装](https://alist.nn.ci/zh/guide/install/manual.html)所述及实际测试，无需额外配置后端 alist-web。
+
+## 编译安装
+
 需要编译安装。
 
 - 功能请求：做成 Port。
@@ -28,7 +44,6 @@
 # rm dist.tar.gz # 清理垃圾
 # cd ..
 ```
-
 
 
 ```bash
