--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
@@ -3,7 +3,9 @@
 
 - 功能请求：做成 Port。
 
-## 官方二进制包
+## 安装
+
+### 官方二进制包
 
 ```sh
 # mkdir alist
@@ -17,7 +19,7 @@
 >
 >根据[手动安装](https://alist.nn.ci/zh/guide/install/manual.html)所述及实际测试，无需额外配置后端 alist-web。
 
-## 编译安装（可选）
+### 编译安装（可选）
 
 
 安装依赖：
