--- a/di-19-zhang-wen-xue-gu-shi/19.4.md
+++ b/di-19-zhang-wen-xue-gu-shi/19.4.md
@@ -1346,4 +1346,4 @@ FreeBSD 作为一个操作系统，其结束也是一个注定的事情，必将
 
 天空是蔚蓝色的是由于天空与我们的距离极其遥远，窗外的橘子依旧辉煌否？
 
-人们在摇骰子之前其实早就已经做出了选择，因此摇色子只是走个形式而已，并不能真正决定张才哲的选择。
+人们在摇骰子之前其实早就已经做出了选择，因此摇骰子只是走个形式而已，并不能真正决定张才哲的选择。
