--- a/di-26-zhang-openbsd/di-26.1-jie-an-zhuang.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-an-zhuang.md
@@ -1,35 +1,35 @@
 # 第 26.1 节 安装
 
-## 安装 release 
+## 安装 RELEASE 版本 
 
 ### 下载镜像
 
-以 OpenBSD 7.5，AMD 64 位架构为例，访问：<https://cdn.openbsd.org/pub/OpenBSD/7.5/amd64> 获取系统镜像。若是刻录 U 盘安装，就下载 `install75.img` （同时支持 UEFI+BIOS）；若是虚拟机体验，请下载 `install75.iso`。
+以 OpenBSD 7.6，AMD 64 位架构为例，访问：<https://cdn.openbsd.org/pub/OpenBSD/7.6/amd64> 获取系统镜像。若是刻录 U 盘安装，就下载 `install76.img` （同时支持 UEFI+BIOS）；若是虚拟机体验，请下载 `install76.iso`。
 
-ISO 镜像同时支持 UEFI 、BIOS 启动，UEFI 初次加载需要多等几分钟：
+ISO 镜像亦同时支持 UEFI 、BIOS 启动，UEFI 初次加载需要多等几分钟：
 
 ![这里会卡上一段时间，请耐心等待](../.gitbook/assets/openbsdload.png)
 
 
 >**警告**
 >
->截止 OpenBSD 7.5 时，请勿使用 ventoy 引导实体机安装。
+>截止 OpenBSD 7.5 时，请勿使用 Ventoy 引导实体机安装。
 
 ### 安装模式
 
 #### 安装过程（UEFI）
 
-使用“install75.iso”，并开启 VMware 虚拟机的 UEFI 功能。
+使用“install76.iso”，并开启 VMware 虚拟机的 UEFI 功能。
 
-> Welcome to the OpenBSD/amd64 7.5 installation program.
+> Welcome to the OpenBSD/amd64 7.6 installation program.
 >
-> (I)nstall, (U)pgrade or (S)hell? `i`
+> (I)nstall, (U)pgrade, (A)utoinstall or (S)hell? `i`
 
-选择 i 进行安装
+输入 `i`，按**回车键**，进行安装
 
 > Choose your keyboard layout ('?', or 'L' for list) \[default]?
 
-选择键盘格式，`回车` 选择默认的美国键盘即可。
+选择键盘格式，按**回车键**，选择默认的美国键盘即可。
 
 > System hostname? (short form, e.g. 'foo') `ykla.cn`
 
@@ -38,15 +38,15 @@ ISO 镜像同时支持 UEFI 、BIOS 启动，UEFI 初次加载需要多等几分
 > Available network interfaces are: em0 vlan0.
 >
 >>
->>Netuork interface to configure? (name, Lladdr , '?' , or 'done ' \[em0] #输入后，此处按 **回车键**
+>>Netuork interface to configure? (name, Lladdr , '?' , or 'done ' \[em0] # 此处按**回车键**
 >>
->>IPu4 address for em0? (or 'autoconf' or 'none')[autoconf] #自动 DHCP IPv4
+>>IPu4 address for em0? (or 'autoconf' or 'none')[autoconf] # 此处按**回车键** 自动 DHCP IPv4
 >>
->>IPv6 address for em0? (or 'autoconf' or 'none')[none] #不需要 IPv6
+>>IPv6 address for em0? (or 'autoconf' or 'none')[none] # 此处按**回车键** 不需要 IPv6
 >>
 >>Available network interfaces are: em0 vlan0.
 >>
->>Netuork interface to configure? (name, Lladdr , '?' , or 'done ' \[done] #输入后，此处按 **回车键**，若设定错误，可输入 [em0] 退回到上面几步。
+>>Netuork interface to configure? (name, Lladdr , '?' , or 'done ' \[done] #此处按 **回车键**，若设定错误，可输入 [em0] 退回到上面几步。
 
 这一步选择网络连接。为免去不必要麻烦，请尽量选择有线网络。可先输入 `？`，详细了解网络名称后再选择。如本例中 `em0` 为有线网络。
 
@@ -66,52 +66,54 @@ ISO 镜像同时支持 UEFI 、BIOS 启动，UEFI 初次加载需要多等几分
 按 **回车键** 确认，开启 ssh：
 
 
-> Do you want the X Windows System to be started by xenodm(1)? [no] yes
+> Do you want the X Windows System to be started by xenodm(1)? [no] yes # 输入 yes，按 **回车键** 确认
 > 
 打开 xenodm 以运行 X
 
-> Setup a user? (enter a lower-case loginname, or 'no') \[no] `ykla`
+> Setup a user? (enter a lower-case loginname, or 'no') \[no] `ykla` # 输入你要的用户名，按 **回车键** 确认
 
 设置用户名。
 
 > Full user name for ykla?
 
-用户全名，可随意输入或者回车默认。
+用户全名，可随意输入或者按 **回车键** 默认。
 
 > Password for ykla account? (will not echo)
 
-为该账号设置密码（密码不会显示在屏幕上）。
+为该账号设置密码（密码不会显示在屏幕上）。按 **回车键** 确认。
 
 > Password for ykla account? (again)
 
-再次输入该用户名的密码。
+再次输入该用户名的密码。按 **回车键** 确认。
 
 > Allow root ssh login?（yes, no, prohibit-password）[no] yes
 
-输入 yes 以允许 root 登录 ssh。
+输入 yes 按 **回车键** 确认，以允许 root 登录 ssh。
 
-> What timezone are you in? ('?' for list) \[US/Eastern] `Asia/Shanghai`
+> What timezone are you in? ('?' for list) \[GB] `Asia`
 
-设置时区。
+输入 Asia 按 **回车键** 确认
+
+>What sub-timezone of 'Asia' are you in? ('?' for list) `Chongqing`
+
+输入 Chongqing（注意，`C` 是大写字母），按 **回车键** 确认
 
 > Available disks are: sd0.
-> sd1
-> sd2
+>
 > Encrypt the root disk? (disk,  'no' or '?' for details) [no]
 
-回车，不加密磁盘。
+按 **回车键**，不加密磁盘。
 
-> Available disks are: sd0 sd1 sd2
-> Which one is the root disk? (or 'done') \[wd0] `?`
+> Available disks are: sd0
+> 
+> Which one is the root disk? (or 'done') \[sd0] `?`
 
-输入 `?` 查看硬盘：
+输入 `?` 可查看硬盘：
 
 ```sh
 Which disk is the root disk? (‘?‘ for details) [sd0] ?
-sd0: NVMe, VMware Virtual N, 1.3 (80.0G)
-sd1: NVMe, VMware Virtual N, 1.3 (1.0G)
-sd2: NVMe, VMware Virtual N, 1.3 (0.1G)
-Available disks are: sd0 sdl sd2.
+    sd0: NVMe, VMware Virtual N, 1.3 (50.0G)
+Available disks are: sd0.
 Which disk is the root disk? (‘?‘ for details) [sd0]
 ```
 
@@ -125,34 +127,30 @@ Which disk is the root disk? (‘?‘ for details) [sd0]
 
 这里我们直接回车，选择系统默认分区。
 
+>**警告**
+>
+>由于存储空间分配极不合理，若你使用自动分区，你将大概率无法安装任何桌面。
+
 >**技巧**
 >
->文末附有自定义分区设置，仅供参考，不推荐新用户尝试。但是若你使用自动分区，你将大概率无法安装任何桌面（存储空间分配不合理）。
+>文末附有自定义分区设置，供参考。
 
-Available disk are: sd0.Which disk do you wish to initialize? (or 'done') \[done] 直接回车。
+Available disk are: sd0. Which disk do you wish to initialize? (or 'done') \[done] 直接回车。
 
-> Let's install the sets! Location of sets? (cd disk ftp http or 'done') \[cd] `disk`
+> Let's install the sets!
+>
+> Location of sets? (cd0 disk ftp http or 'done') \[cd0] 直接回车。
 
-软件地址，选择 `disk`。这里我们选择安装盘为软件地址。
+软件地址，选择 `cd0`。这里我们选择安装盘为软件源。
 
-> Is the disk partition already mounted? \[yes] `no`
+> Pathname to the sets? (or 'done')[7.6/and64] 直接回车。
 
-需要提示一点的是，系统询问是否已识别 U 盘时，一定要选择否，否则系统不会识别。如不确定 U 盘编号，可输入 `?` 查看。
-
-```sh
-Which disk contains the install media? (Cor 'done') [sd1] 选择 sd1
-a: 1358848 1024 2048 16384 16142
-i: 960 64 MSDOS
-Available sd1 partitions are: a i.
-Which wdo partition has the install sets? Cor 'done') [a] 回车
-Pathname to the sets? Cor 'done') [7.5/amd64] 回车
-```
 ```sh
 Select sets by entering a set name, a file name pattern or 'all'. De-select
 sets by prepending a '-' to the set name, name pattern or 'all'. Selected sets are labelled `[X]`
 
-[X] bsd      [X] bsd.rd        [X] comp75.tgz   [X] game75.tgz  [X] xshare75.tgz  [X] xserv75.tgz
-[X] bsd.mp   [X] base75.tgz    [H] man75.tgz    [X] xbase75.tgz [X] xfont75.tgz
+[X] bsd      [X] bsd.rd        [X] comp76.tgz   [X] game76.tgz  [X] xshare76.tgz
+[X] bsd.mp   [X] base76.tgz    [H] man76.tgz    [X] xbase76.tgz [X] xfont76.tgz
 
 
 Set name(s)? (or 'abort' or 'done') [done] -game*
@@ -169,20 +167,29 @@ Set name(s)? (or 'abort' or 'done') [done] 输入 -game*
 [X] bsd.mp   [X] base75.tgz    [H] man75.tgz    [X] xbase75.tgz [X] xfont75.tgz
 
 Set name(s)? (or 'abort' or 'done') [done] 回车
-Directory does not contain SHA256sig. Continue without verification? [no] 输入 yes
+Directory does not contain SHA256sig. Continue without verification? [no] 请输入 yes，回车
 ```
 
-> Location of sets? (cd disk ftp http or 'done') \[done]
-
-如果不想卡在 `fw_update` 这一步，请在此处拔掉网线断开网络。
 
 继续回车确认。此后开始安装系统。约 5 分钟后，会出现如下提示：
 
+>Location of sets? (cd0 disk http nfs or 'done')[done]
+>
+>Time appears wrong.   Set to 'Mon Dec 16 22:43:37CST 2824' ? [yes]
+
+>**警告**
+>
+>如果不想卡在 `fw_update` 这一步，请在按回车前，此刻，拔掉网线断开网络连接。
+
+
+
 ```sh
 CONGRATULATIONS! Your OpenBSD install has been successfully completed!
-To boot the new system, enter 'reboot' at the command prompt.
-When you login to your new system the first time,
-please read your mail using the 'mail' command.
+
+When you login to your new system the first time, please read your mail
+using the 'mail' command.
+
+Exit to (S)heLL, (H)alt or (R)eboot? [reboot] 按回车键重启进入新系统 
 ```
 
 
