--- a/di-26-zhang-openbsd/di-26.1-jie-an-zhuang.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-an-zhuang.md
@@ -163,8 +163,8 @@ Set name(s)? (or 'abort' or 'done') [done] -game*
 ```sh
 Set name(s)? (or 'abort' or 'done') [done] 输入 -game*
 
-[X] bsd      [X] bsd.rd        [X] comp75.tgz   [ ] game75.tgz  [X] xshare75.tgz  [X] xserv75.tgz
-[X] bsd.mp   [X] base75.tgz    [H] man75.tgz    [X] xbase75.tgz [X] xfont75.tgz
+[X] bsd      [X] bsd.rd        [X] comp76.tgz   [ ] game76.tgz  [X] xshare76.tgz
+[X] bsd.mp   [X] base76.tgz    [H] man76.tgz    [X] xbase76.tgz [X] xfont76.tgz
 
 Set name(s)? (or 'abort' or 'done') [done] 回车
 Directory does not contain SHA256sig. Continue without verification? [no] 请输入 yes，回车
