--- a/di-26-zhang-openbsd/di-26.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-26-zhang-openbsd/di-26.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -199,9 +199,9 @@ $ git clone https://github.com/vinceliuice/Tela-icon-theme && cd Tela-icon-theme
 
 >**警告**
 >
->此小节有问题（窗口的黑的），待未来再测试。
+>此小节有问题（窗口是黑的），待未来再测试。
 
-仅适用于 OpenBSD 7.5 及以上。
+本教程基于 OpenBSD 7.6。
 
 
 ```sh
