kde-plasma-extras

--- a/di-26-zhang-openbsd/di-26.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-26-zhang-openbsd/di-26.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -205,7 +205,7 @@ $ git clone https://github.com/vinceliuice/Tela-icon-theme && cd Tela-icon-theme
 
 
 ```sh
-# pkg_add kde dbus kde-plasma kde-plasma-extra
+# pkg_add kde dbus kde-plasma kde-plasma-extras
 ```
 
 打开 `/etc/rc.conf.local`，添加以下几行：
