--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
@@ -58,6 +58,31 @@ dev.pcm.2.play.vchanmode: vchan format/rate selection: 0=fixed, 1=passthrough, 2
 - 采样率(vchanrate),DSD 采样率为 44.1khz 的倍数，所以不要设为 48khz 的倍数不然会有杂音，在可能的情况下设置为最高，这里是 352.8khz。
 - 0（fixed）：在此模式下，音频设备使用固定的采样率和格式来处理多路音频流。1（passthrough）：在此模式下，音频设备尽可能地保持输入音频流的原始采样率和格式。2（adaptive）：在此模式下，音频设备会根据需要自动适应和转换输入音频流的采样率和格式。
 
+>**技巧**
+>
+>可以用 `dmesg` 查看可用采样率。在非播放非 dsd 文件时，采样率和音频文件采样率相同（或整数倍）为宜，这样可以避免重采样造成的音质损失。采样率不是越高越好，可以多试几次，找到最佳。
+
+```sh
+# dmesg|grep -i pcm2
+pcm2 on uaudio0
+# dmesg|grep -i uaudio0
+uaudio0 on uhub0
+uaudio0: <HiBy R3, class 239/2, rev 2.00/ff.ff, addr 1> on usbus1
+uaudio0: Play[0]: 384000 Hz, 2 ch, 32-bit S-LE PCM format, 2x4ms buffer. (selected)
+uaudio0: Play[0]: 352800 Hz, 2 ch, 32-bit S-LE PCM format, 2x4ms buffer.
+uaudio0: Play[0]: 192000 Hz, 2 ch, 32-bit S-LE PCM format, 2x4ms buffer.
+uaudio0: Play[0]: 176400 Hz, 2 ch, 32-bit S-LE PCM format, 2x4ms buffer.
+uaudio0: Play[0]: 96000 Hz, 2 ch, 32-bit S-LE PCM format, 2x4ms buffer.
+uaudio0: Play[0]: 88200 Hz, 2 ch, 32-bit S-LE PCM format, 2x4ms buffer.
+uaudio0: Play[0]: 48000 Hz, 2 ch, 32-bit S-LE PCM format, 2x4ms buffer.
+uaudio0: Play[0]: 44100 Hz, 2 ch, 32-bit S-LE PCM format, 2x4ms buffer.
+uaudio0: Play[0]: 32000 Hz, 2 ch, 32-bit S-LE PCM format, 2x4ms buffer.
+uaudio0: No recording.
+uaudio0: No MIDI sequencer.
+pcm2 on uaudio0
+uaudio0: No HID volume keys found.
+```
+
 ### 基本设置
 
 musicpd 配置文件为 `/usr/local/etc/musicpd.conf` 。
