--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
@@ -2,11 +2,36 @@
 
 ## 本地音乐播放器
 
-- Audacious: `pkg install audacious`
+- Audacious:
+
+安装：
+
+```sh
+# pkg install audacious
+```
+
+或者
+
+```sh
+# cd /usr/ports/multimedia/audacious/ 
+# make install clean
+```
 
 ## 本地视频播放器
 
-- VLC： `pkg install vlc`
+- VLC：
+
+
+```sh
+# pkg install vlc
+```
+
+或者：
+
+```sh
+# cd /usr/ports/multimedia/vlc/ 
+# make install clean
+```
 
 
 ## 用 MPD 播放 DSD
@@ -21,14 +46,22 @@ Music Player Daemon (MPD) 是一个灵活、强大且可扩展的音乐播放器
 
 ### 安装
 
-```
+```sh
 # pkg install musicpd
 ```
+
+或者
+
+```sh
+# cd /usr/ports/audio/musicpd/
+# make install clean
+```
+
 ### 硬件设置
 
 查看声卡信息
 
-```
+```sh
 # cat /dev/sndstat
 pcm0: <Realtek ALC269 (Analog 2.0+HP/2.0)> (play/rec) default
 pcm1: <Intel Cougar Point (HDMI/DP 8ch)> (play)
@@ -40,7 +73,7 @@ No devices installed from userspace.
 
 可以用 `sysctl -d dev.pcm.2` 查看相关硬件参数意义，摘录关键的三条如下：
 
-```
+```sh
 dev.pcm.2.bitperfect: bit-perfect playback/recording (0=disable, 1=enable)
 dev.pcm.2.play.vchanrate: virtual channel mixing speed/rate
 dev.pcm.2.play.vchanmode: vchan format/rate selection: 0=fixed, 1=passthrough, 2=adaptive
@@ -48,7 +81,7 @@ dev.pcm.2.play.vchanmode: vchan format/rate selection: 0=fixed, 1=passthrough, 2
 
 如下设置(可以写入 `sysctl.conf` 永久化设置):
 
-```
+```sh
 # sysctl dev.pcm.2.bitperfect=1
 # sysctl dev.pcm.2.play.vchanrate=352800
 # sysctl dev.pcm.2.play.vchanmode=1
@@ -89,7 +122,7 @@ musicpd 配置文件为 `/usr/local/etc/musicpd.conf` 。
 
 里面默认的一些目录为
 
-```
+```conf
 /var--> mpd --
                |-> music
                |-> .mpd --> playlists
@@ -97,7 +130,7 @@ musicpd 配置文件为 `/usr/local/etc/musicpd.conf` 。
 
 这些目录要自行建立
 
-```
+```sh
 # mkdir -p /var/mpd/music
 # mkdir -p /var/mpd/.mpd/playlists
 # chown -R mpd:mpd /var/mpd
@@ -108,7 +141,7 @@ musicpd 配置文件为 `/usr/local/etc/musicpd.conf` 。
 
 修改 `/usr/local/etc/musicpd.conf` 中有关 oss 一节如下：
 
-```
+```conf
 audio_output {
         type            "oss"
         name            "Default OSS Device"
@@ -119,20 +152,33 @@ audio_output {
 
 开启 musicpd 服务
 
-```
+```sh
 # sysrc musicpd_enable=YES
 # service musicpd start
 ```
 
 ### 客户端使用
 
-可以使用 ncmpc (命令行）,MaximumMPD(iphone)等客户端，这个不再赘述。
+可以使用 ncmpc (命令行）,MaximumMPD（iphone）等客户端，这个不再赘述。
 
 
 
 ## 音频剪辑
 
-- Audacity : `# pkg install audacity`
+- Audacity :
+
+安装：
+
+```sh
+# pkg install audacity
+```
+
+或者
+
+```sh
+# cd /usr/ports/audio/audacity/ 
+# make install clean
+```
 
 ## 视频剪辑
 
@@ -140,7 +186,18 @@ audio_output {
 
 Unix 系统下相关软件有很多，这里我们简单介绍一下矢量制图程序 **Inkscape** 的使用方法
 
-- [ ] 安装方式： `# pkg install inkscape`
+- [ ] 安装方式：
+
+```sh
+# pkg install inkscape
+```
+
+或者：
+
+```sh
+# cd /usr/ports/graphics/inkscape/ 
+# make install clean
+```
 
 1. `Ctrl O（拉丁字母）` 打开图片
 2. 点击图片
@@ -153,14 +210,39 @@ Unix 系统下相关软件有很多，这里我们简单介绍一下矢量制图
 
 ### 视频剪辑
 
-- Olive 视频编辑器：`# pkg install olive-video-editor`
+- Olive 视频编辑器：
 
-## 编辑字幕
+安装：
 
-- Aegisub：`# pkg install aegisub`
+```sh
+# pkg install olive-video-editor
+```
+
+或者：
+
+```sh
+# cd /usr/ports/multimedia/olive/ 
+# make install clean
+```
+
 
 ## 压缩字幕
 
-- ffmpeg : `# pkg install ffmpeg`
+- ffmpeg :
 
-`$ ffmpeg -i 视频文件.mp4 -vf subtitles=对应字幕.ass 输出视频.mp4`
+```
+# pkg install ffmpeg
+```
+
+或者：
+
+```sh
+# cd /usr/ports/multimedia/ffmpeg/ 
+# make install clean
+```
+
+处理：
+
+```sh
+$ ffmpeg -i 视频文件.mp4 -vf subtitles=对应字幕.ass 输出视频.mp4
+```
