--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -6,7 +6,7 @@
 
 > Windows 11 IoT Enterprise LTSC, version 24H2 (x64) - DVD (English) 系统链接（来自 itellyou）：
 >
-> 因为 IoT 版本解除了 TPM 等安装限制。
+> 因为 IoT 版本解除了 TPM、内存大小等安装限制。
 > 
 > SHA256：4F59662A96FC1DA48C1B415D6C369D08AF55DDD64E8F1C84E0166D9E50405D7A
 > 
