--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -1,6 +1,6 @@
 # 第 10.3 节 使用 bhyve 安装 Windows 11
 
-以下教程基于 FreeBSD 14.2 release + Windows 11 Enterprise LTSC 2024。
+	以下教程基于 FreeBSD 14.2 RELEASE + Windows 11 IoT Enterprise LTSC。
 
 ## 安装固件与所需软件
 
@@ -199,11 +199,15 @@ Starting winguest
 
 ![](../.gitbook/assets/win5.png)
 
+请注意将第二项改为“Chinese (Simplified, Mainland China)”
+
 ![](../.gitbook/assets/win6.png)
+
+我们选择“Chinese (Simplified, Mainland China)”
 
 ![](../.gitbook/assets/win7.png)
 
-
+开始安装。
 
 查看指定的虚拟机状态：
 
