--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -1,6 +1,6 @@
 # 第 10.3 节 使用 bhyve 安装 Windows 11
 
-	以下教程基于 FreeBSD 14.2 RELEASE + Windows 11 IoT Enterprise LTSC。
+以下教程基于 FreeBSD 14.2 RELEASE + Windows 11 IoT Enterprise LTSC。
 
 ## 安装固件与所需软件
 
@@ -14,7 +14,9 @@
 
 加载内核模块：
 
-> 只需要这一次，以后 vm-bhyve 会自己加载该模块的。
+>**技巧**
+>
+>只需要这一次，以后 vm-bhyve 会自己加载该模块的。
 
 ```sh
 # kldload vmm
@@ -207,9 +209,20 @@ Starting winguest
 
 ![](../.gitbook/assets/win7.png)
 
-开始安装。
+开始安装。在安装中会断开若干次 VNC 连接，重新连接即可。
 
-查看指定的虚拟机状态：
+
+- 查看所有虚拟机状态：
+
+
+
+```sh
+root@ykla:/usr/home/ykla # vm list
+NAME      DATASTORE  LOADER  CPU  MEMORY  VNC  AUTO  STATE
+winguest  default    uefi    2    4G      -    No    Stopped
+```
+
+- 查看指定的虚拟机状态：
 
 ```sh
 root@ykla:/usr/home/ykla # vm info winguest
@@ -240,15 +253,6 @@ Virtual Machine: winguest
     bytes-used: 23557898240 (21.940G)
 ```
 
-查看所有虚拟机状态：
-
-
-
-```sh
-root@ykla:/usr/home/ykla # vm list
-NAME      DATASTORE  LOADER  CPU  MEMORY  VNC  AUTO  STATE
-winguest  default    uefi    2    4G      -    No    Stopped
-```
 
 打开 tigervnc-viewer 输入 `localhost`，点击连接，然后按任意键以进入安装过程。
 
@@ -283,6 +287,8 @@ winguest  default    uefi    2    4G      -    No    Stopped
 ```
 
 打开 VNC 连接即可。
+
+
 
 ### 故障排除
 
