--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -212,46 +212,6 @@ Starting winguest
 开始安装。在安装中会断开若干次 VNC 连接，重新连接即可。
 
 
-- 查看所有虚拟机状态：
-
-
-
-```sh
-root@ykla:/usr/home/ykla # vm list
-NAME      DATASTORE  LOADER  CPU  MEMORY  VNC  AUTO  STATE
-winguest  default    uefi    2    4G      -    No    Stopped
-```
-
-- 查看指定的虚拟机状态：
-
-```sh
-root@ykla:/usr/home/ykla # vm info winguest
-------------------------
-Virtual Machine: winguest
-------------------------
-  state: stopped
-  datastore: default
-  loader: uefi
-  uuid: af86e094-56da-11ed-958f-208984999cc9
-  cpu: 2
-  memory: 4G
-
-  network-interface
-    number: 0
-    emulation: e1000
-    virtual-switch: public
-    fixed-mac-address: 58:9c:fc:0c:5e:bb
-    fixed-device: -
-
-  virtual-disk
-    number: 0
-    device-type: file
-    emulation: ahci-hd
-    options: -
-    system-path: /home/ykla/vm/winguest/disk0.img
-    bytes-size: 42949672960 (40.000G)
-    bytes-used: 23557898240 (21.940G)
-```
 
 
 打开 tigervnc-viewer 输入 `localhost`，点击连接，然后按任意键以进入安装过程。
@@ -278,7 +238,11 @@ Virtual Machine: winguest
 >root@ykla:~ # kill -9 1858
 ```
 
-### 汉化系统
+### 安装后配置
+
+![](../.gitbook/assets/win8.png)
+
+选择“China”。
 
 安装后开机：
 
@@ -347,7 +311,48 @@ tap0: flags=8943<UP,BROADCAST,RUNNING,PROMISC,SIMPLEX,MULTICAST> metric 0 mtu 15
 
 
 
-## 可选配置（我没测试过，自己试用）
+## 可选配置
+
+- 查看所有虚拟机状态：
+
+
+```sh
+root@ykla:/usr/home/ykla # vm list
+NAME      DATASTORE  LOADER  CPU  MEMORY  VNC  AUTO  STATE
+winguest  default    uefi    2    4G      -    No    Stopped
+```
+
+- 查看指定的虚拟机状态：
+
+```sh
+root@ykla:/usr/home/ykla # vm info winguest
+------------------------
+Virtual Machine: winguest
+------------------------
+  state: stopped
+  datastore: default
+  loader: uefi
+  uuid: af86e094-56da-11ed-958f-208984999cc9
+  cpu: 2
+  memory: 4G
+
+  network-interface
+    number: 0
+    emulation: e1000
+    virtual-switch: public
+    fixed-mac-address: 58:9c:fc:0c:5e:bb
+    fixed-device: -
+
+  virtual-disk
+    number: 0
+    device-type: file
+    emulation: ahci-hd
+    options: -
+    system-path: /home/ykla/vm/winguest/disk0.img
+    bytes-size: 42949672960 (40.000G)
+    bytes-used: 23557898240 (21.940G)
+```
+
 
 ### VNC 配置选项
 
