--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -252,7 +252,29 @@ Starting winguest
 
 打开 VNC 连接即可。
 
+![](../.gitbook/assets/win9.png)
 
+输入用户名
+
+![](../.gitbook/assets/win10.png)
+
+输入密码
+
+![](../.gitbook/assets/win11.png)
+
+重复输入密码
+
+![](../.gitbook/assets/win12.png)
+
+输入安全问题，会重复三次要求你设置三个不同问题。
+
+![](../.gitbook/assets/win13.png)
+
+隐私设置。可随意调整，然后点击“Accept”
+
+![](../.gitbook/assets/win14.png)
+
+……它会在安装中更新，有一些方法可以跳过（如断网，改 oobe），这里请读者自行研究。
 
 ### 故障排除
 
