--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -276,6 +276,23 @@ Starting winguest
 
 ……它会在安装中更新，有一些方法可以跳过（如断网，改 oobe），这里请读者自行研究。
 
+- 查看 FreeBSD 下载流量（net-mgmt/bwm-ng）
+
+```sh
+# pkg install bwm-ng
+# bwm-ng
+  bwm-ng v0.6.3 (probing every 0.500s), press 'h' for help
+  input: getifaddrs type: rate
+  /         iface                   Rx                   Tx                Total
+  ==============================================================================
+              em0:           2.04 MB/s            6.03 KB/s            2.05 MB/s
+              lo0:           0.00  B/s            0.00  B/s            0.00  B/s
+        vm-public:           2.04 MB/s            2.05 MB/s            4.09 MB/s
+             tap0:           5.49 KB/s            2.04 MB/s            2.04 MB/s
+  ------------------------------------------------------------------------------
+            total:           4.09 MB/s            4.09 MB/s            8.18 MB/s
+```
+
 ### 故障排除
 
 有问题先重启一遍自己的物理机。还有问题自己 `ifconfig` 对比上文看看是不是有了多余的网卡，将其销毁掉。
