--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -293,6 +293,8 @@ Starting winguest
             total:           4.09 MB/s            4.09 MB/s            8.18 MB/s
 ```
 
+按字母 `d` 可以切换流量格式。按 `h` 可以查阅更多使用方法。
+
 ### 故障排除
 
 有问题先重启一遍自己的物理机。还有问题自己 `ifconfig` 对比上文看看是不是有了多余的网卡，将其销毁掉。
