--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -51,3 +51,21 @@ resolv_conf="/dev/null"
 # systat -if 2
 ```
 
+## 查看 FreeBSD 下载流量（net-mgmt/bwm-ng）
+
+```sh
+# pkg install bwm-ng
+# bwm-ng
+  bwm-ng v0.6.3 (probing every 0.500s), press 'h' for help
+  input: getifaddrs type: rate
+  /         iface                   Rx                   Tx                Total
+  ==============================================================================
+              em0:           2.04 MB/s            6.03 KB/s            2.05 MB/s
+              lo0:           0.00  B/s            0.00  B/s            0.00  B/s
+        vm-public:           2.04 MB/s            2.05 MB/s            4.09 MB/s
+             tap0:           5.49 KB/s            2.04 MB/s            2.04 MB/s
+  ------------------------------------------------------------------------------
+            total:           4.09 MB/s            4.09 MB/s            8.18 MB/s
+```
+
+按字母 `d` 可以切换流量格式。按 `h` 可以查阅更多使用方法。
