--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -276,7 +276,19 @@ Starting winguest
 
 ……它会在安装中更新，可能有一些方法可以跳过（经测试 oobe\bypassnro 无效），这里请读者自行研究。
 
+![](../.gitbook/assets/win15.png)
 
+![](../.gitbook/assets/win16.png)
+
+汉化系统：
+
+![](../.gitbook/assets/win17.png)
+
+![](../.gitbook/assets/win18.png)
+
+![](../.gitbook/assets/win19.png)
+
+![](../.gitbook/assets/win20.png)
 
 ### 故障排除
 
