--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -172,7 +172,7 @@ root@ykla:/usr/home/ykla #
 
 ## 安装系统
 
-指定 Windows iso 文件开始正常安装。当在安装模式下运行时，`vm-bhyve` 将等待，直到 VNC 客户端连接后再启动客户机。这能让你抓住 Windows 可能显示的提示“Press any key to boot from a CD/DVD“。你能在 `vm list` 中看到，在此时，虚拟机将显示为锁定：
+指定 Windows iso 文件开始正常安装。当在安装模式下运行时，`vm-bhyve` 将等待，直到 VNC 虚拟端连接后再启动虚拟机。这能让你抓住 Windows 可能显示的提示“Press any key to boot from a CD/DVD“。你能在 `vm list` 中看到，在此时，虚拟机将显示为锁定：
 
 ```sh
 # vm install winguest /home/ykla/en-us_windows_11_iot_enterprise_ltsc_2024_x64_dvd_f6b14814.iso # 替换成你自己的路径
@@ -401,7 +401,7 @@ Virtual Machine: winguest
 graphics_listen="1.2.3.4"
 ```
 
-你也可以选择一个 5900 以外的端口。显然，如果你有多个客户机，需要为每个客户机使用不同的端口号。如果没有指定，我们会自动选择一个可用的端口，从 5900 开始：
+你也可以选择一个 5900 以外的端口。显然，如果你有多个虚拟机，需要为每个虚拟机使用不同的端口号。如果没有指定，我们会自动选择一个可用的端口，从 5900 开始：
 
 ```sh
 graphics_port="5901"
@@ -431,14 +431,14 @@ graphics_res="1600x900"
 
 虽然“e1000”网络适配器开箱即用，允许访客获得网络访问，但建议尽可能使用“virtio-net”设备。有几种安装这些驱动程序的方法。
 
-- 如果机器可以通过 e1000 设备访问互联网，你可以直接在客户机中下载并安装 virtio 驱动。安装完毕后，关闭客户机，在客户机配置中改变设备并重新启动。
-- 可以在安装模式下启动客户机，但要指定 VirtIO ISO 文件。
+- 如果机器可以通过 e1000 设备访问互联网，你可以直接在虚拟机中下载并安装 virtio 驱动。安装完毕后，关闭虚拟机，在虚拟机配置中改变设备并重新启动。
+- 可以在安装模式下启动虚拟机，但要指定 VirtIO ISO 文件。
 
 ```sh
 # vm install winguest virtio-installer.iso
 ```
 
-- 可以添加 CD 设备到客户机上，并指向 ISO 文件
+- 可以添加 CD 设备到虚拟机上，并指向 ISO 文件
 
 ```sh
 disk1_type="ahci-cd"
@@ -450,11 +450,11 @@ disk1_name="/full/path/to/virtio-installer.iso"
 
 某些版本的 Windows（大多数桌面版本）不支持一个以上的物理 CPU。默认情况下，bhyve 配置单个虚拟 CPU 和单核心。
 
-可以修改 sysctl `hw.vmm.topology.cores_per_package` 以告诉 bhyve 为每个 CPU 创建多核心，而不是单核心。例如，将这个 sysctl 设置为 4 将配置一个有 8 个 vCPU 的客户机，有 2 x 4 个核心。
+可以修改 sysctl `hw.vmm.topology.cores_per_package` 以告诉 bhyve 为每个 CPU 创建多核心，而不是单核心。例如，将这个 sysctl 设置为 4 将配置一个有 8 个 vCPU 的虚拟机，有 2 x 4 个核心。
 
 必须在 /boot/loader.conf 中设置（并重新启动才能生效）`hw.vmm.topology.cores_per_package`。
 
-当在 FreeBSD 12 上，使用 vm-bhyve 1.3 时，可以使用配置选项来控制每个客户的 CPU 拓扑结构：
+当在 FreeBSD 12 上，使用 vm-bhyve 1.3 时，可以使用配置选项来控制每个虚拟的 CPU 拓扑结构：
 
 ```sh
 cpu=8
@@ -473,7 +473,7 @@ disk0_name="disk0.img"
 disk0_opts="maxq=16,qsz=8,ioslots=1,sectsz=512,ser=ABCDEFGH"
 ```
 
-你甚至可以在没有虚拟磁盘的情况下将客户机安装到物理 NVMe 磁盘上。以下是一个例子：
+你甚至可以在没有虚拟磁盘的情况下将虚拟机安装到物理 NVMe 磁盘上。以下是一个例子：
 
 ```sh
 loader="uefi"
@@ -491,13 +491,13 @@ passthru0="4/0/0"
 
 目前，NVMe 启动支持 Windows 8.1 及更新的 Windows 操作系统，如果你想从 NVMe 磁盘启动 Windows 7，请按照以下步骤进行。
 
-- 使用 ahci-HD 控制器安装 Windows 7 客户机，就像正常程序一样。
+- 使用 ahci-HD 控制器安装 Windows 7 虚拟机，就像正常程序一样。
 - 安装后，用 nvme 控制器附加一个额外的 disk1.img。
-- 安装微软的 nvme 补丁，即 `Windows6.1-KB2990941-v3-x64.msu` 和 `Windows6.1-KB3087873-v2-x64.msu`，确保 nvme 控制器和磁盘 1 出现在 windows7 客户的设备管理器中。
-- 关闭客户机电源，交换客户机配置中的 disk0.img 和 disk1.img。再次启动。
-- 关闭客户机电源，删除 ahci 控制器和 disk1.img。留下 nvme 控制器和 disk0.img，再次启动。
+- 安装微软的 nvme 补丁，即 `Windows6.1-KB2990941-v3-x64.msu` 和 `Windows6.1-KB3087873-v2-x64.msu`，确保 nvme 控制器和磁盘 1 出现在 windows7 虚拟的设备管理器中。
+- 关闭虚拟机电源，交换虚拟机配置中的 disk0.img 和 disk1.img。再次启动。
+- 关闭虚拟机电源，删除 ahci 控制器和 disk1.img。留下 nvme 控制器和 disk0.img，再次启动。
 
-现在 Windows 7 客户机设备管理器中只有 nvme 控制器，没有 ahci 控制器。
+现在 Windows 7 虚拟机设备管理器中只有 nvme 控制器，没有 ahci 控制器。
 
 ## 参考资料
 
