--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -172,7 +172,7 @@ root@ykla:/usr/home/ykla #
 
 ## 安装系统
 
-指定 Windows iso 文件开始正常安装。当在安装模式下运行时，`vm-bhyve` 将等待，直到 VNC 虚拟端连接后再启动虚拟机。这能让你抓住 Windows 可能显示的提示“Press any key to boot from a CD/DVD“。你能在 `vm list` 中看到，在此时，虚拟机将显示为锁定：
+指定 Windows iso 文件开始正常安装。当在安装模式下运行时，`vm-bhyve` 将等待，直到 VNC 客户端连接后再启动虚拟机。这能让你抓住 Windows 可能显示的提示“Press any key to boot from a CD/DVD“。你能在 `vm list` 中看到，在此时，虚拟机将显示为锁定：
 
 ```sh
 # vm install winguest /home/ykla/en-us_windows_11_iot_enterprise_ltsc_2024_x64_dvd_f6b14814.iso # 替换成你自己的路径
