--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -401,13 +401,13 @@ Virtual Machine: winguest
 graphics_listen="1.2.3.4"
 ```
 
-你也可以选择一个 5900 以外的端口。显然，如果你有多个虚拟机，需要为每个虚拟机使用不同的端口号。如果没有指定，我们会自动选择一个可用的端口，从 5900 开始：
+你也可以选择 5900 以外的端口。显然，如果你有多个虚拟机，需要为每个虚拟机使用不同的端口号。如果没有指定，我们会自动选择一个可用的端口，从 5900 开始：
 
 ```sh
 graphics_port="5901"
 ```
 
-默认情况下，屏幕分辨率被设置为 `800x600`。要指定一个不同的分辨率，请使用以下选项：
+在默认情况下，屏幕分辨率被设置为 `800x600`。要指定其他分辨率，请使用以下参数：
 
 ```sh
 graphics_res="1600x900"
@@ -429,7 +429,7 @@ graphics_res="1600x900"
 
 ### 添加 VirtIO 网络驱动
 
-虽然“e1000”网络适配器开箱即用，允许访客获得网络访问，但建议尽可能使用“virtio-net”设备。有几种安装这些驱动程序的方法。
+虽然网络适配器“e1000”开箱即用，能让用户联网，但建议尽可能使用“virtio-net”设备。有多种安装这些驱动程序的方法。
 
 - 如果机器可以通过 e1000 设备访问互联网，你可以直接在虚拟机中下载并安装 virtio 驱动。安装完毕后，关闭虚拟机，在虚拟机配置中改变设备并重新启动。
 - 可以在安装模式下启动虚拟机，但要指定 VirtIO ISO 文件。
@@ -448,11 +448,11 @@ disk1_name="/full/path/to/virtio-installer.iso"
 
 ### 关于 CPU
 
-某些版本的 Windows（大多数桌面版本）不支持一个以上的物理 CPU。默认情况下，bhyve 配置单个虚拟 CPU 和单核心。
+大多数桌面版本的 Windows 不支持一个以上的物理 CPU。在默认情况下，bhyve 配置单个虚拟 CPU 和单核心。
 
-可以修改 sysctl `hw.vmm.topology.cores_per_package` 以告诉 bhyve 为每个 CPU 创建多核心，而不是单核心。例如，将这个 sysctl 设置为 4 将配置一个有 8 个 vCPU 的虚拟机，有 2 x 4 个核心。
+可以修改 sysctl 变量 `hw.vmm.topology.cores_per_package` 以告诉 bhyve 为每个 CPU 创建多核心，而非单核心。例如，将这个 sysctl 设置为 4 将配置一个有 8 个 CPU 的虚拟机，有 2 x 4 个核心。
 
-必须在 /boot/loader.conf 中设置（并重新启动才能生效）`hw.vmm.topology.cores_per_package`。
+必须在 `/boot/loader.conf` 中设置 `hw.vmm.topology.cores_per_package`（重新启动才能生效）。
 
 当在 FreeBSD 12 上，使用 vm-bhyve 1.3 时，可以使用配置选项来控制每个虚拟的 CPU 拓扑结构：
 
@@ -465,7 +465,7 @@ cpu_threads=1
 
 ### 关于 NVMe 支持
 
-如同 FreeBSD 12.1R，bhyve 支持 NVMe 模拟。对于 vm-bhyve 配置，请遵循以下选项：
+如同 FreeBSD 12.1R，bhyve 支持模拟 NVMe。对于 vm-bhyve 配置，请遵循以下选项：
 
 ```sh
 disk0_type="nvme"
@@ -489,7 +489,7 @@ passthru0="4/0/0"
 
 `4/0/0` 是一块直通的 NVMe SSD。
 
-目前，NVMe 启动支持 Windows 8.1 及更新的 Windows 操作系统，如果你想从 NVMe 磁盘启动 Windows 7，请按照以下步骤进行。
+目前，NVMe 启动支持 Windows 8.1 及更新的 Windows，如果你想从 NVMe 磁盘启动 Windows 7，请按照以下步骤进行。
 
 - 使用 ahci-HD 控制器安装 Windows 7 虚拟机，就像正常程序一样。
 - 安装后，用 nvme 控制器附加一个额外的 disk1.img。
@@ -497,7 +497,7 @@ passthru0="4/0/0"
 - 关闭虚拟机电源，交换虚拟机配置中的 disk0.img 和 disk1.img。再次启动。
 - 关闭虚拟机电源，删除 ahci 控制器和 disk1.img。留下 nvme 控制器和 disk0.img，再次启动。
 
-现在 Windows 7 虚拟机设备管理器中只有 nvme 控制器，没有 ahci 控制器。
+现在 Windows 7 虚拟机设备管理器中只有 nvme 控制器，没有 AHCI 控制器。
 
 ## 参考资料
 
