--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -4,7 +4,7 @@
 
 ## 安装固件与所需软件
 
-> Windows 11 IoT Enterprise LTSC, version 24H2 (x64) - DVD (English) 系统链接（来自 itellyou）：
+> Windows 11 IoT Enterprise LTSC, version 24H2 (x64) - DVD (English) 系统链接（来自 [itellyou](https://next.itellyou.cn/)）：
 >
 > 因为 IoT 版本解除了 TPM、内存大小等安装限制。
 > 
