--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -22,8 +22,8 @@
 |   机器人   |    gnome-robots    |             |                |
 |   黑白棋   |       iagno        |  kreversi   |     翻转棋     |
 |   吃豆人   |                    |   kapman    |                |
-|   华容道   |  _gnome-klotski_   |             |                |
-|  宝石迷阵  |     swell-foop     |  kdiamond   |   消除类游戏   |
+|   华容道   |  gnome-klotski  |             |                |
+|  宝石迷阵  |    swell-foop     |  kdiamond   |   消除类游戏   |
 |  快艇骰子  |        tali        |   kiriki    |                |
 |   四子棋   |   four-in-a-row    | kfourinline |                |
 |   炸弹人   |                    |  granatier  |                |
@@ -42,7 +42,7 @@
 
 `Renpy` 是一款视觉小说引擎，可以很方便地拿来制作互动视频游戏。由于游戏骨架是 `Python` 语言，因此可以很方便地移植到不同的系统平台上，如 Windows 及 Linux。
 
-虽然 `Renpy` 暂时未对`FreeBSD`作系统适配，但是 `FreeBSD` 自己对其作了二次打包。如此一来，就可以在 FreeBSD 上畅玩互动游戏了么？显然不是！不过，我们可以作一番小小的尝试。
+虽然 `Renpy` 暂时未对 `FreeBSD` 作系统适配，但是 `FreeBSD` 自己对其作了二次打包。如此一来，就可以在 FreeBSD 上畅玩互动游戏了么？显然不是！不过，我们可以作一番小小的尝试。
 
 ### 操作
 
@@ -53,13 +53,20 @@
 # pkg install renpy
 ```
 
+或者：
+
+```sh
+# cd /usr/ports/games/renpy/ 
+# make install clean
+```
+
 2.  下载游戏
 
     这里以[《心跳文学部！》](https://teamsalvato.itch.io/ddlc)为例，其它游戏也可同样操作。选择附有 Linux 版本的游戏解压。
 
 >**警告**
 >
->《心跳文学部！》是一款恐怖游戏，并可能会致郁，以上只做说明，请你不要尝试该游戏！由于编者对此处并不熟悉，请求社区用其他游戏进行替换，请 PR。
+>《心跳文学部！》是一款恐怖游戏，并可能会致郁！由于编者对此处并不熟悉，请求社区用其他游戏进行替换，可 PR。
 
 
 3.  运行 renpy
@@ -96,6 +103,13 @@ python3 unrpyc -c "XXX.rpyc"
 # pkg install godot-tool godot
 ```
 
+或者：
+
+```sh
+# cd /usr/ports/devel/godot-tools/ && make install clean
+# cd /usr/ports/devel/godot/ && make install clean
+```
+
 安装好以后新建项目，进入编辑器，你可能会发现非常卡，CPU 占用高。这是因为此时 Godot 的渲染是 CPU 在处理，而且交给了单个线程。  
 你需要给 `godot-tool` 加一个启动参数:
 
@@ -107,7 +121,6 @@ $ godot-tool --rendering-driver opengl3
 除此之外，还需要注意的是工程的创建，如果你遇到了上面的卡顿问题，并且使用了强制 OpenGL 参数，在创建项目的时候应该选择“兼容”，而不是 Forward+ 或移动，因为只有“兼容”才使用 OpenGL3 后端，那两个都是 RenderingDevice，这个可以在窗口中的介绍看到。
  
 ![图片](https://github.com/FreeBSD-Ask/FreeBSD-Ask/assets/138698339/335335ca-3994-48ec-99f5-be20c5668f8d)  
-
   
 ![CPU 占用情况](https://github.com/FreeBSD-Ask/FreeBSD-Ask/assets/138698339/63f445e5-070d-4b38-82ee-b022c552bb9d)  
 
