--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.3-jie-ke-yan-yu-zhuan-ye-gong-ju.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.3-jie-ke-yan-yu-zhuan-ye-gong-ju.md
@@ -1,8 +1,5 @@
 # 第 20.3 节 科研与专业工具
 
-## 计算机科学
-
-编程？
 
 ## 语言与翻译
 
@@ -10,11 +7,24 @@
 
 简单的计算器 **bc**
 
-安装命令：`# pkg install gnubc`
+安装命令：
+
+```sh
+# pkg install gnubc
+```
+
+或者
+
+```sh
+# cd /usr/ports/math/gnubc/ 
+# make install clean
+```
 
 ### 后缀表示法
 
-_注：本节内容参考了维基百科_
+>**注意**
+>
+>本节内容参考了维基百科，需要重写。
 
 从幼儿园接触数学开始，我们用的计算表达方式就是中缀表示法。如，要计算 3 和 4 的和，写作 `3 + 4`，操作符（本例是加号）处于操作数（即 3 和 4）的中间。
 
@@ -48,11 +58,33 @@ _注：本节内容参考了维基百科_
 
 ### 几何绘图软件 **geogebra**
 
-安装命令：`# pkg install geogebra`
+安装命令：
+
+```sh
+# pkg install geogebra
+```
+
+或者：
+
+```sh
+# cd /usr/ports/math/geogebra/ 
+# make install clean
+```
 
 ## 线性规划
 
-GLPK 安装：`# pkg install glpk`
+安装 GLPK：
+
+```sh
+# pkg install glpk
+```
+
+或者
+
+```sh
+# cd /usr/ports/math/glpk/ 
+# make install clean
+```
 
 线性规划里，我们经常会用到 **单纯形法**。 在计算机层面，有很多软件可以解放我们的大脑，甚至你可以在 OFFICE 表格软件的“规划求解”里，得到很好的解答。 这里我们简单介绍一下命令行免费线性规划软件包 GLPK 的使用方法。希望大家可以触类旁通，举一反三。
 
@@ -117,36 +149,168 @@ end;
 
 ## 物理和化学
 
-- 元素周期表 `GPeriodic`: `# pkg install gperiodic`
+- 元素周期表 `GPeriodic`:
+
+安装：
+
+```sh
+# pkg install gperiodic
+```
+
+或者
+
+```sh
+# cd /usr/ports/biology/gperiodic/ 
+# make install clean
+```
 
 ## 天文地理
 
-- 星图软件 Stellarium： `# pkg install stellarium`
-- Gnome 地图：`# pkg install gnome-maps`
+- 星图软件 Stellarium：
+
+安装：
+
+```sh
+# pkg install stellarium
+```
+
+或者：
+
+```sh
+# cd /usr/ports/astro/stellarium/ 
+# make install clean
+```
+
+- Gnome 地图：
+
+安装：
+
+```sh
+# pkg install gnome-maps
+```
+
+或者：
+
+```sh
+# cd /usr/ports/deskutils/gnome-maps/ 
+# make install clean
+```
 
 ## 艺术
 
 ### 音乐
 
-- MIDI 编曲软件 `LMMS`：`# pkg install lmms`
-- 制谱软件 `MuseScore`：`# pkg install musescore`
+- MIDI 编曲软件 `LMMS`：
+
+安装：
+
+```sh
+# pkg install lmms
+```
+
+或：
+
+```sh
+# cd /usr/ports/audio/lmms/ 
+# make install clean
+```
+
+- 制谱软件 `MuseScore`：
+
+安装：
+
+```sh
+# pkg install musescore
+```
+
+或者：
+
+```sh
+# cd /usr/ports/audio/musescore/ 
+# make install clean
+```
 
 ### 三维图像
 
-- 三维图形图像软件 `Blender`： `# pkg install blender`
+- 三维图形图像软件 `Blender`：
+
+安装：
+
+```sh
+# pkg install blender
+```
+
+或者：
+
+```sh
+# cd /usr/ports/graphics/blender/
+# make install clean
+```
 
 ### 绘画
 
-- Krita: `# pkg install krita`
-- MyPaint: `# pkg install mypaint`
+- Krita:
+
+安装：
+
+```sh
+ # pkg install krita
+```
+
+或者：
+
+```sh
+# cd /usr/ports/graphics/krita/ 
+# make install clean
+```
+
+- MyPaint:
+
+
+安装：
+
+```sh
+# pkg install mypaint
+```
+
+或者：
+
+```sh
+# cd /usr/ports/graphics/mypaint/ 
+# make install clean
+```
 
 ## 工具与软件
 
-科学计算软件 GNU Octave： `# pkg install octave`
+- 科学计算软件 GNU Octave： 
 
-计算机代数系统 wxMaxima： `# pkg install wxmaxima`
+安装：
 
-Python 及其相关模块： `# pkg install python py38-scipy py38-pandas py38-matplotlib py38-sympy`
+```sh
+# pkg install octave
+```
+
+或者：
+
+```sh
+# cd /usr/ports/math/octave/ 
+# make install clean
+```
+
+- 计算机代数系统 wxMaxima： 
+
+安装：
+
+```sh
+# pkg install wxmaxima
+```
+
+或：
+
+```sh
+# cd /usr/ports/math/wxmaxima/
+# make install clean
+```
 
 ## 统计学
 
