--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -1,24 +1,21 @@
 # 第 20.1 节 游戏
 
-## 经典游戏
 
-### 五分钟游戏
+## 五分钟游戏
 
-注：斜体为暂未打包的游戏，需要自行安装。
 
-|            |     Gnome/GTK      |   KDE/Qt    |      备注      |
+|    游戏        |     Gnome/GTK      |   KDE/Qt    |      备注      |
 | :--------: | :----------------: | :---------: | :------------: |
-|    数独    |    gnome-sudoku    |   ksudoku   | 逻辑/益智游戏  |
-|    数壹    |       hitori       |             | 逻辑/益智游戏  |
-|    扫雷    |    gnome-mines     |   kmines    |    益智游戏    |
-|    2048    |     gnome-2048     |   2048-qt   |    益智游戏    |
-|   贪吃蛇   |   gnome-nibbles    |             |    休闲游戏    |
-|  国际象棋  |    gnome-chess     |   knights   |    益智游戏    |
-|   五子棋   |                    |    bovo     |    益智游戏    |
-|    拼图    |    gnome-taquin    |             |    益智游戏    |
-|  配对拼图  |   gnome-tetravex   |             |    益智游戏    |
-|   对对碰   |   gnome-mahjongg   |  _kajongg_  |                |
-| 俄罗斯方块 |    quadrapassel    |   kblocks   | 限时消除类游戏 |
+|    数独    |    games/gnome-sudoku    |   games/ksudoku   | 逻辑/益智游戏  |
+|    数壹    |       games/hitori       |             | 逻辑/益智游戏  |
+|    扫雷    |     games/gnome-mines    |   games/kmines    |    益智游戏    |
+|    2048    |     games/gnome-2048     |      |    益智游戏    |
+|   贪吃蛇   |   games/gnome-nibbles    |             |    休闲游戏    |
+|  国际象棋  |    games/gnome-chess    |    games/knights   |    益智游戏    |
+|   五子棋   |                    |     games/bovo     |    益智游戏    |
+|  配对拼图  |   games/gnome-tetravex  |             |    益智游戏    |
+|   对对碰   |  games/gnome-mahjongg   |   |                |
+| 俄罗斯方块 |     games/quadrapassel    |   kblocks   | 限时消除类游戏 |
 |   机器人   |    gnome-robots    |             |                |
 |   黑白棋   |       iagno        |  kreversi   |     翻转棋     |
 |   吃豆人   |                    |   kapman    |                |
@@ -27,16 +24,14 @@
 |  快艇骰子  |        tali        |   kiriki    |                |
 |   四子棋   |   four-in-a-row    | kfourinline |                |
 |   炸弹人   |                    |  granatier  |                |
-|  珠玑妙算  | _gnome-mastermind_ |             | 逻辑/益智游戏  |
+|  珠玑妙算  | |             | 逻辑/益智游戏  |
 |            |                    |   klines    |  彩色线条游戏  |
 |  纸牌接龙  |     aisleriot      |             |                |
 |            |       atomix       |   katomic   |    解谜游戏    |
 
 更多逻辑/益智游戏请访问[网页谜题](https://cn.puzzle-sudoku.com/)，及[本地小游戏](https://gottcode.org/)。
 
-### 经典开源游戏
 
-## Wine / PlayOnBSD 游戏
 
 ## Renpy 游戏
 
