--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -4,7 +4,7 @@
 ## 五分钟游戏
 
 
-|    游戏        |     Gnome/GTK      |   KDE/Qt    |      备注      |
+|    游戏        |     Gnome/GTK      |   KDE/Qt    |      游戏类型      |
 | :--------: | :----------------: | :---------: | :------------: |
 |    数独    |    games/gnome-sudoku    |   games/ksudoku   | 逻辑/益智游戏  |
 |    数壹    |       games/hitori       |             | 逻辑/益智游戏  |
@@ -15,19 +15,18 @@
 |   五子棋   |                    |     games/bovo     |    益智游戏    |
 |  配对拼图  |   games/gnome-tetravex  |             |    益智游戏    |
 |   对对碰   |  games/gnome-mahjongg   |   |                |
-| 俄罗斯方块 |     games/quadrapassel    |   kblocks   | 限时消除类游戏 |
-|   机器人   |    gnome-robots    |             |                |
-|   黑白棋   |       iagno        |  kreversi   |     翻转棋     |
-|   吃豆人   |                    |   kapman    |                |
-|   华容道   |  gnome-klotski  |             |                |
-|  宝石迷阵  |    swell-foop     |  kdiamond   |   消除类游戏   |
-|  快艇骰子  |        tali        |   kiriki    |                |
-|   四子棋   |   four-in-a-row    | kfourinline |                |
-|   炸弹人   |                    |  granatier  |                |
-|  珠玑妙算  | |             | 逻辑/益智游戏  |
-|            |                    |   klines    |  彩色线条游戏  |
-|  纸牌接龙  |     aisleriot      |             |                |
-|            |       atomix       |   katomic   |    解谜游戏    |
+| 俄罗斯方块 |     games/quadrapassel    |   games/kblocks   | 限时消除类游戏 |
+|   机器人   |    games/gnome-robots    |             |                |
+|   黑白棋   |               |  games/kreversi   |     翻转棋     |
+|   吃豆人   |                    |   games/kapman    |                |
+|   华容道   |  games/gnome-klotski |             |                |
+|  宝石迷阵  |     games/swell-foop     |  games/kdiamond   |   消除类游戏   |
+|  快艇骰子  |        games/tali        |     games/kiriki  |                |
+|   四子棋   |   games/four-in-a-row    |  games/kfourinline |                |
+|   炸弹人   |                    |  games/granatier  |                |
+|            |                    |   games/klines    |  彩色线条游戏  |
+|  纸牌接龙  |     games/aisleriot      |             |                |
+|            |       games/atomix       |   games/katomic   |    解谜游戏    |
 
 更多逻辑/益智游戏请访问[网页谜题](https://cn.puzzle-sudoku.com/)，及[本地小游戏](https://gottcode.org/)。
 
