--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
@@ -2,8 +2,7 @@
 
 不同于 Linux（Linus 拒绝合并 i18n 补丁到 Linux 内核里面。【此处存疑，因此需要更多依据】），FreeBSD 新型终端 VT，是原生支持 cjk 的，所以放个字体进去，就能显示中文了。
 
-1. 首先你没有改过控制台程序，使用的是默认的。
-2. 本说明是以 FreeBSD 12.1 release 为例。
+本说明是以 FreeBSD 14.2 RELEASE 为例。
 
 字体格式为 `.fnt`
 
@@ -15,12 +14,26 @@ FreeBSD 基本系统提供了一个工具，可用于将 bdf、hex 转换为 fnt
 vtfontcvt [ -h 高度 ] [ -v ] [ -w 宽度] [字体]
 ```
 
-命令都是临时的，若要永久生效，将其加入 `rc.conf`
-
 - 示例：
 
+
+![未加入字体的 tty](../.gitbook/assets/tty0.png)
+
 ```sh
-$ fetch http://book.bsdcn.org/b16.fnt
+$ fetch https://people.freebsd.org/~emaste/newcons/b16.fnt
 $ vidcontrol -f b16.fnt
 ```
 
+
+![设置完成后的 tty](../.gitbook/assets/tty1.png)
+
+命令都是临时的，若要永久生效，将其加入 `/etc/rc.conf`:
+
+```sh
+allscreens_flags="-f /root/b16.fnt"
+```
+
+## 参考文献
+
+- [rc.conf](https://man.freebsd.org/cgi/man.cgi?query=rc.conf&sektion=5)，此页搜索“allscreens_flags”
+- [vidcontrol font and color via /etc/rc.conf problem](https://forums.freebsd.org/threads/vidcontrol-font-and-color-via-etc-rc-conf-problem.81696/)
