--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
@@ -1,6 +1,6 @@
 # 第 23.3 节 FreeBSD 中文 TTY 控制台
 
-不同于 Linux（Linus 拒绝合并 i18n 补丁到 Linux 内核里面。【此处存疑，因此需要更多依据】），FreeBSD 新型终端 VT，是原生支持 cjk 的，所以放个字体进去，就能显示中文了。
+不同于 Linux（Linus 拒绝合并 i18n 补丁到 Linux 内核里面），FreeBSD 新型终端 VT，是原生支持 cjk 的，所以放个字体进去，就能显示中文了。
 
 本说明是以 FreeBSD 14.2 RELEASE 为例。
 
@@ -37,3 +37,4 @@ allscreens_flags="-f /root/b16.fnt"
 
 - [rc.conf](https://man.freebsd.org/cgi/man.cgi?query=rc.conf&sektion=5)，此页搜索“allscreens_flags”
 - [vidcontrol font and color via /etc/rc.conf problem](https://forums.freebsd.org/threads/vidcontrol-font-and-color-via-etc-rc-conf-problem.81696/)
+- [Custom cjktty patches](https://github.com/zhmars/cjktty-patches)，Linux 中文 tty 内核补丁，作者似乎已经放弃维护了
