--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
@@ -2,6 +2,12 @@
 
 不同于 Linux（Linus 拒绝合并 i18n 补丁到 Linux 内核里面），FreeBSD 新型终端 VT，是原生支持 cjk 的，所以放个字体进去，就能显示中文了。
 
+>“我们不会对内核字符串进行国际化，过去也从未做过。是的，有些人曾尝试为翻译目的建立内核消息的数据库，但我坚决拒绝将这一部分纳入开发流程。这很烦。”
+>
+>“说白了，我只需要简单的英文界面。如果你不爽，那你就别用。就这样。”
+>
+>    ——Linus Torvalds
+
 本说明是以 FreeBSD 14.2 RELEASE 为例。
 
 字体格式为 `.fnt`
