--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
@@ -1,6 +1,6 @@
 # 第 23.3 节 FreeBSD 中文 TTY 控制台
 
-不同于 Linux（Linus 拒绝合并 i18n 补丁到 Linux 内核里面），FreeBSD 新型终端 VT，是原生支持 cjk 的，所以放个字体进去，就能显示中文了。
+不同于 Linux，Linus 拒绝合并 i18n 补丁到 Linux 内核里面：
 
 >“我们不会对内核字符串进行国际化，过去也从未做过。是的，有些人曾尝试为翻译目的建立内核消息的数据库，但我坚决拒绝将这一部分纳入开发流程。这很烦。”
 >
@@ -8,7 +8,9 @@
 >
 >    ——Linus Torvalds
 
-本说明是以 FreeBSD 14.2 RELEASE 为例。
+FreeBSD 新型终端 VT，是原生支持 cjk 的，所以放个字体进去，即可显示中文。
+
+本说明以 FreeBSD 14.2 RELEASE 为例。
 
 字体格式为 `.fnt`
 
@@ -44,3 +46,4 @@ allscreens_flags="-f /root/b16.fnt"
 - [rc.conf](https://man.freebsd.org/cgi/man.cgi?query=rc.conf&sektion=5)，此页搜索“allscreens_flags”
 - [vidcontrol font and color via /etc/rc.conf problem](https://forums.freebsd.org/threads/vidcontrol-font-and-color-via-etc-rc-conf-problem.81696/)
 - [Custom cjktty patches](https://github.com/zhmars/cjktty-patches)，Linux 中文 tty 内核补丁，作者似乎已经放弃维护了
+- [Internationalizing the Kernel](https://www.linuxjournal.com/content/internationalizing-kernel)，linus 言论出处
