--- a/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
+++ b/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
@@ -4,9 +4,11 @@
 
 FreeBSD 使用传统的 BSD init 管理系统服务。
 
-- 启动服务：`# service XXX start`
-- 停止服务：`# service XXX stop`
-- 重启服务：`# service XXX restart`
+- 启动服务：`# service xxx start`
+- 停止服务：`# service xxx stop`
+- 重启服务：`# service xxx restart`
+- 添加服务并开机自启：`service xxx enable`
+- 禁用开机启动：`service xxx disable`
 
 系统服务在安装以后默认是禁用状态，以上命令无法执行，需要先开启服务：
 
@@ -23,13 +25,21 @@ XXX_enable="YES"
 也可以用命令添加：
 
 ```sh
-sysrc XXX_enable="YES"
+# sysrc xxx_enable="YES"
+```
+
+```sh
+# service xxx enable
 ```
 
 或者禁用：
 
 ```sh
-sysrc XXX_enable="NO"
+# sysrc xxx_enable="NO"
+```
+
+```sh
+# service xxx disable
 ```
 
 >**提示**
