--- a/di-10-zhang-xu-ni-hua/di-10.3.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3.md
@@ -1,5 +1,12 @@
 #  使用 BVCP 通过网页管理 BHyve
 
+BVCP 是一款 Web 界面的 BHyve 管理软件。
+
+支持 FreeBSD 12 及更高，本文基于 FreeBSD 14.2 RELEASE。目前本文使用的 2.1.4 版本 BVCP 尚不支持中文。
+
+本软件尚未开源，地址 <https://github.com/DaVieS007/bhyve-webadmin>
+
+
 下载 BVCP：
 
 ```sh
@@ -65,9 +72,19 @@ bvcp_enable:  -> YES
 
  N  2024-12-21 11:33:48 | SW | Program exited gracefully...
 Installation Finished!
-Navigate: https://[your-ip]:8086  # 访问地址 https://localhost:8086
+Navigate: https://[your-ip]:8086  # 访问地址 https://localhost:8086（在安装 BVCP 的机器上访问的地址）
 ```
+
+## 故障排除
+
+- 不知道怎么卸载
+
+已经询问了作者，[How to uninstall BVCP ?](https://github.com/DaVieS007/bhyve-webadmin/issues/63)
+
 
 ## 参考文献
 
+- [bhyve を GUI で操作する BVCP の導入。](https://running-dog.net/2024/02/post_2933.html)
 - [How to install BVCP](https://bhyve.npulse.net/installation)，官方安装说明
+- [TroubleShoot / Frequently Asked Questions (FAQ)](https://bhyve.npulse.net/technical)，常见疑难解答
+- [Deploy Virtual Machine (Windows)](https://bhyve.npulse.net/deploy_windows)，官方的 Windows 安装说明
