--- a/di-10-zhang-xu-ni-hua/di-10.3.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3.md
@@ -1,4 +1,4 @@
-#  使用 BVCP 通过网页管理 BHyve
+# 使用 BVCP 通过网页管理 BHyve
 
 BVCP 是一款 Web 界面的 BHyve 管理软件。
 
@@ -57,7 +57,7 @@ bvcp_enable:  -> YES
  The Software is located at: /var/lib/nPulse/BVCP
 
  The Software is producing pseudo filesystem scheme for virtual machines using symlinks
- Where to create metadata, iso_images, database, config, logs: (Does not need much space), default: [/vms]_>   # 此处按回车
+ Where to create metadata, iso_images, database, config, logs: (Does not need much space), default: [/vms]_>   # 此处按回车，iso_images 要安装的镜像即存放在此处
 
 ……省略一部分……
 
@@ -74,6 +74,78 @@ bvcp_enable:  -> YES
 Installation Finished!
 Navigate: https://[your-ip]:8086  # 访问地址 https://localhost:8086（在安装 BVCP 的机器上访问的地址）
 ```
+
+## 安装 Ubuntu 24.04
+
+
+下载 Ubuntu 24.04：
+
+```sh
+root@ykla:/home/ykla # fetch https://mirrors.ustc.edu.cn/ubuntu-releases/noble/ubuntu-24.04.1-desktop-amd64.iso
+```
+
+将镜像移动到 `iso_images`（安装中指定的路径）：
+
+```sh
+root@ykla:/home/ykla # mv ubuntu-24.04.1-desktop-amd64.iso /vms/iso_images
+```
+
+
+![](../.gitbook/assets/BVCP1.png)
+
+![](../.gitbook/assets/BVCP2.png)
+
+![](../.gitbook/assets/BVCP3.png)
+
+不要管上面的 email，直接输入安装过程中生成的用户名 `admin`，再输入密码即可。
+
+![](../.gitbook/assets/BVCP4.png)
+
+![](../.gitbook/assets/BVCP5.png)
+
+![](../.gitbook/assets/BVCP6.png)
+
+![](../.gitbook/assets/BVCP7.png)
+
+![](../.gitbook/assets/BVCP8.png)
+
+![](../.gitbook/assets/BVCP9.png)
+
+![](../.gitbook/assets/BVCP10.png)
+
+![](../.gitbook/assets/BVCP11.png)
+
+![](../.gitbook/assets/BVCP12.png)
+
+![](../.gitbook/assets/BVCP13.png)
+
+![](../.gitbook/assets/BVCP14.png)
+
+![](../.gitbook/assets/BVCP15.png)
+
+![](../.gitbook/assets/BVCP16.png)
+
+![](../.gitbook/assets/BVCP17.png)
+
+![](../.gitbook/assets/BVCP18.png)
+
+![](../.gitbook/assets/BVCP19.png)
+
+![](../.gitbook/assets/BVCP20.png)
+
+![](../.gitbook/assets/BVCP21.png)
+
+![](../.gitbook/assets/BVCP22.png)
+
+![](../.gitbook/assets/BVCP23.png)
+
+![](../.gitbook/assets/BVCP24.png)
+
+![](../.gitbook/assets/BVCP25.png)
+
+![](../.gitbook/assets/BVCP26.png)
+
+![](../.gitbook/assets/BVCP27.png)
 
 ## 故障排除
 
