--- a/di-10-zhang-xu-ni-hua/di-10.3.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3.md
@@ -147,6 +147,14 @@ root@ykla:/home/ykla # mv ubuntu-24.04.1-desktop-amd64.iso /vms/iso_images
 
 ![](../.gitbook/assets/BVCP27.png)
 
+![](../.gitbook/assets/BVCP28.png)
+
+安装后按回车重启。
+
+![](../.gitbook/assets/BVCP29.png)
+
+进入安装好的 Ubuntu 24.04。
+
 ## 故障排除
 
 - 不知道怎么卸载
