--- a/di-10-zhang-xu-ni-hua/di-10.2-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.2-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -1,4 +1,4 @@
-# 第 10.2 节 使用 bhyve 安装 Windows 11
+# 第 10.2 节 使用 bhyve 安装 Windows 11（基于 vm-bhyve）
 
 以下教程基于 FreeBSD 14.2 RELEASE + Windows 11 IoT Enterprise LTSC。
 
