--- a/di-10-zhang-xu-ni-hua/di-10.3.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3.md
@@ -1,11 +1,16 @@
 # 使用 BVCP 通过网页管理 BHyve
 
-BVCP 是一款 Web 界面的 BHyve 管理软件。
+BVCP 是一款 Web 界面的 BHyve 管理软件。这个软件真的很好用，运行流畅，操作简单。
 
 支持 FreeBSD 12 及更高，本文基于 FreeBSD 14.2 RELEASE。目前本文使用的 2.1.4 版本 BVCP 尚不支持中文。
 
 本软件尚未开源，地址 <https://github.com/DaVieS007/bhyve-webadmin>
 
+>**技巧**
+>
+>无需提前配置任何东西：不需要提前配置任何服务，不需要加载任何模块，亦不需要安装任何软件。直接按字面意思参照本文即可。
+
+## 安装 BVCP
 
 下载 BVCP：
 
@@ -154,6 +159,22 @@ root@ykla:/home/ykla # mv ubuntu-24.04.1-desktop-amd64.iso /vms/iso_images
 ![](../.gitbook/assets/BVCP29.png)
 
 进入安装好的 Ubuntu 24.04。
+
+## 安装 Windows 11 IoT Enterprise LTSC, version 24H2 (x64) - DVD (English) 
+
+详细步骤省略，参见上节 10.2 及上小节 Ubuntu 24.04 的安装，仅指出不同点。
+
+在 `Create new network interface` 创建新网卡接口这一步：
+
+![](../.gitbook/assets/BVCP30.png)
+
+请务必选择 `Intel PRO e1000`，因为默认的网卡没驱动。
+
+![](../.gitbook/assets/BVCP31.png)
+
+开始安装
+
+![](../.gitbook/assets/BVCP32.png)
 
 ## 故障排除
 
