--- a/di-10-zhang-xu-ni-hua/di-10.3.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3.md
@@ -152,9 +152,11 @@ root@ykla:/home/ykla # mv ubuntu-24.04.1-desktop-amd64.iso /vms/iso_images
 
 ![](../.gitbook/assets/BVCP27.png)
 
+安装后按回车重启。
+
 ![](../.gitbook/assets/BVCP28.png)
 
-安装后按回车重启。
+进入新系统：
 
 ![](../.gitbook/assets/BVCP29.png)
 
