--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -1,5 +1,67 @@
 # 第 20.1 节 游戏
 
+## Minecraft 我的世界
+
+### 桌面端
+
+>**警告**
+>
+>请勿使用 Port `games/minecraft-client`。无人维护，版本太旧已经过时，打开均提示无法下载。
+
+#### 安装 OpenJDK
+
+过旧的 jdk 版本并不支持，本文测试 23 正常。
+
+安装 OpenJDK23：
+
+```sh
+# pkg install openjdk23
+```
+
+或者：
+
+```sh
+# cd /usr/ports/java/openjdk23/ 
+# make install clean
+```
+
+#### 配置 HMCL
+
+从 [releases](https://github.com/HMCL-dev/HMCL/releases) 下载最新的发行版本（写作本文时为 `HMCL-3.6.11.265.jar`）。
+
+打开终端执行
+
+```sh
+$ java -jar HMCL-3.6.11.265.jar
+```
+
+不是所有的 Minecraft 版本都支持，适配版本请参考[平台支持状态](https://github.com/HMCL-dev/HMCL/blob/main/PLATFORM_cn.md)。
+
+其他设置同其他平台，不再赘述。
+
+
+#### 启动游戏
+
+失败。
+
+### 服务器端
+
+经过测试 [Minecraft 官方服务器端](https://www.minecraft.net/en-us/download/server)可以直接在 FreeBSD 14.2 上运行。只需要安装 OpenJDK 即可。
+
+还可以使用 Ports 中的 `games/minecraft-server`：
+
+```sh
+# cd /usr/ports/games/minecraft-server/ 
+# make install clean
+```
+
+查看配置信息：
+
+```sh
+# pkg info -D minecraft-server
+
+
+
 
 ## 五分钟游戏
 
